# tca-blackjack

./: DEVELOPMENT-STORY.md  LICENSE  PROJECT_GUIDELINES.md  README.md  TCA-WATCHDOG-DESIGN-NOTES.md  docker-compose.yml  swarm-architecture.html  tca-architecture.html  tca-contract-reference.md  tca-guidelines.md  tca-observability-reference.md  tca-project-kickoff.md  work-methods.md
.github/workflows/: codeql.yml
auth-service/: index.ts  package.json
auth-ui-service/: main.go
bank-service/cobol/: CALC-PAYOUT.cob
bank-service/go/: go.mod  handlers.go  main.go
cert-init/: Dockerfile  gen-certs.sh
chat-service/lib/chat_service/: application.ex
contracts/openapi/: auth-service.yaml  auth-ui-service.yaml  bank-service.yaml  chat-service.yaml  dealer-ai.yaml  deck-service.yaml  document-service-contract.md  document-service.yaml  email-service.yaml  game-state.yaml  gateway.yaml  hand-evaluator.yaml  observability-service.yaml
dealer-ai/: Dockerfile  entrypoint.sh
deck-service/: go.mod  main.go
document-service/: index.ts
email-service/: Dockerfile  entrypoint.sh  templates.py  transport.py
game-state/: go.mod  main.go
gateway/: go.mod  main.go
hand-evaluator/: Main.hs  hand-evaluator.cabal
infra/: swarm-architecture.html
itsdeadjim/bank-service/: BankService.text
observability-service/: CONTRACT.md  main.go
ui/: index.html  package-lock.json  package.json
ui/public/: index.html
ui/src/: App.tsx
ui/src/components/: EnrollmentModal.tsx  GameTable.tsx  ObservabilityDrawer.tsx  ObservabilityPanel.tsx
ui/src/hooks/: useGameState.ts
